--- a/common-web-quickly/common-ignore-exception/pom.xml
+++ b/common-web-quickly/common-ignore-exception/pom.xml
@@ -28,5 +28,9 @@
             <artifactId>spring-jdbc</artifactId>
             <!--<version>3.2.12.RELEASE</version>-->
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+        </dependency>
     </dependencies>
 </project>
