--- a/common-web-quickly/pom.xml
+++ b/common-web-quickly/pom.xml
@@ -42,6 +42,12 @@
                 <version>${spring.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+
             <!-- aop -->
             <dependency>
                 <groupId>org.aspectj</groupId>
